--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
           <p>The app also offers a personalized shopping experience, tailoring product recommendations based on your preferences and past purchases. Additionally, it features a reward system for eco-friendly actions, like recycling old clothes and opting for sustainable materials. With VerdeVogue, you can shop with a clear conscience, knowing that your choices are contributing to a more sustainable fashion industry.</p>
         </div>
         <div class="app-image">
-          <img src="https://images.unsplash.com/photo-1625193784051-7b0b907b85bb?auto=format&fit=crop&w=600&q=80" alt="VerdeVogue App"/>
+          <img src="verdevogue.png" alt="VerdeVogue App"/>
         </div>
         <div class="download-btns">
           <a href="#" class="app-store-btn">Download on the App Store</a>
@@ -166,17 +166,17 @@
           <h2>Our Story – The Birth of VerdeVogue</h2>
           <p>
             VerdeVogue began as a passion project sparked by a simple yet powerful question:
-“Can fashion look good, feel good, and do good for the planet?”
+            “Can fashion look good, feel good, and do good for the planet?”
 
-Founded by a group of college students driven by climate awareness and creativity, VerdeVogue was born out of a desire to challenge the fast fashion cycle and give people a better alternative. We saw how quickly trends changed—and how much waste was left behind.
+            Founded by a group of college students driven by climate awareness and creativity, VerdeVogue was born out of a desire to challenge the fast fashion cycle and give people a better alternative. We saw how quickly trends changed—and how much waste was left behind.
 
-What started as a sustainability-themed hackathon idea soon evolved into a mission:
-To make sustainable fashion not just a choice, but a lifestyle.
+            What started as a sustainability-themed hackathon idea soon evolved into a mission:
+            To make sustainable fashion not just a choice, but a lifestyle.
 
-We merged tech and consciousness—developing smart tools like TrashScan, WasteWatch, and BinSense—to help individuals make informed, impactful fashion choices every day. With VerdeVogue, our goal is to educate, empower, and inspire a new generation of shoppers to walk a little lighter on the earth, while staying stylish.
+            We merged tech and consciousness—developing smart tools like TrashScan, WasteWatch, and BinSense—to help individuals make informed, impactful fashion choices every day. With VerdeVogue, our goal is to educate, empower, and inspire a new generation of shoppers to walk a little lighter on the earth, while staying stylish.
 
-This is more than a brand.
-It’s a movement. It’s a mindset. It’s VerdeVogue.
+            This is more than a brand.
+            It’s a movement. It’s a mindset. It’s VerdeVogue.
           </p>
         </div>
       </section>
